# SuperchargedArray

./: .gitignore  OpenCL.Tensor.sln  README.md  SuperchargedArray.sln  System.ArrayExtension.sln  xTensor.CSharp.sln
AFTest/: AFTest.cpp  AFTest.vcxproj  AFTest.vcxproj.filters
AFWork/: AFWork.csproj  AFWork.sln  ArrayExtension.cs  Data.cs  DataLoader.cs  Device.cs  Global.cs  Matrix.cs  Ops.cs  Program.cs  Shape.cs  SuperArray.cs
ArrayExt.Accel.Testing/: ArrayExt.Accel.Testing.csproj  ArrayExt.Accel.Testing.dll.config  Program.cs
OpenCL.Tensor/: DType.cs  Formatter.cs  Global.cs  Helper.cs  MemoryCopier.cs  NDArray.cs  OpenCL.Tensor.sln  RefCounter.cs  ResultBuilder.cs  SeedSource.cs  Serializer.cs  Storage.cs
SpicyLang.Exporter/: Program.cs  SpicyLang.Exporter.csproj
SpicyNLP/: AttributeEnum.cs  Document.cs  Hash.cs  Helper.cs  IFunction.cs  ISpicy.cs  Lemmatizer.cs  Lexeme.cs  Retokenize.cs  Span.cs  SpicyNLP.csproj  StringStore.cs  SymbolEnum.cs  Token.cs  Underscore.cs  Unicode.cs  Vector.cs  Vocab.cs
SuperNeuro/: Enumerations.cs  History.cs  ImUtil.cs  ParamValidator.cs  Parameter.cs  Sequential.cs  SuperArrayExtension.cs  SuperNeuro.csproj  TrainPredict.cs  TrainingEvents.cs  Utils.cs
SuperchargedArray/: ArrayExtension.cs  ArrayExtra.cs  DType.cs  DataLoader.cs  Device.cs  Ops.cs  (+14 more)
xtensor-nn/: CMakeLists.txt  enumerations.h  functions.cpp  functions.h  main.cpp  variable.cpp  variable.h
xtensor-nn/xtl/lib/cmake/xsimd/: xsimdConfigVersion.cmake
xtensor-nn/xtl/lib/cmake/xtl/: xtlConfigVersion.cmake
xtensor-nn/xtl/lib/pkgconfig/: xtensor.pc  xtl.pc
(+419 files in other folders)
